# s3-sync-action

./: .env  .env.local  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: terraform.yml
python/: GITHUBTESTING.py  GITHUBTESTING1.py  GITHUBTESTING2.py  GITHUBTESTING3.py
scripts/python/: Dockerfile
template/testapi/: PULL_REQUEST_TEMPLATE.md  cookiecutter.json  create.py
template/testapi/{{ cookiecutter.__root }}/{{ cookiecutter.working_directory }}/: main.py
